# book_character_simulation

./: .gitignore  docker-compose.yml
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.txt  run.py
backend/alembic/: env.py
backend/alembic/versions/: 20260405_0001_create_relational_core.py
backend/chroma_db/: chroma.sqlite3
backend/controllers/: character_processor.py  chat_controller.py
backend/database/: chroma_manager.py
backend/qdrant_storage/: meta.json
backend/src/book_character_simulation_backend/: app.py  auth.py  config.py  errors.py  prompts.py
backend/src/book_character_simulation_backend/api/: routes.py
backend/src/book_character_simulation_backend/db/: __init__.py  base.py  models.py  session.py
backend/src/book_character_simulation_backend/llm/: __init__.py  base.py  factory.py  gemini_provider.py  openai_provider.py
backend/src/book_character_simulation_backend/repositories/: __init__.py  chroma.py  relational.py
backend/src/book_character_simulation_backend/schemas/: __init__.py  character.py  chat.py
backend/src/book_character_simulation_backend/services/: __init__.py  character_service.py  chat_service.py  relational_persistence_service.py
backend/src/book_character_simulation_backend/utils/: __init__.py  json.py  pdf.py
frontend/: .env.example  .gitignore  README.md  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: AppShell.css  AppShell.jsx  AuthScreen.css  AuthScreen.jsx  (+10 more)
(+9 files in other folders)
